--- a/.html
+++ b/.html
@@ -1,8 +1,9 @@
 <header>
-<li>
+<li class=headstuff>
 <ul>Linkedin</ul>
 <ul>About Me</ul>
 <ul>Resume</ul>
 <ul>Projects</ul>
 <ul>Contact Me</ul>
 </li>
+</header>
