--- a/.html
+++ b/.html
@@ -1,9 +1,17 @@
-<header>
-<li class=headstuff>
-<ul>Linkedin</ul>
-<ul>About Me</ul>
-<ul>Resume</ul>
-<ul>Projects</ul>
-<ul>Contact Me</ul>
-</li>
-</header>
+<!DOCTYPE HTML>
+<html>
+  <div class=bigback>
+    <body>
+      <header>
+        <ul class=headstuff>
+          <li><a href="#">Contact</a></li>
+          <li><a href="#">Projects</a></li>
+          <li><a href="#">Linkedin</a></li>
+          <li><a href="#">Resume</a></li>
+          <li><a href="#">About</a></li>
+        </ul>
+      </header>
+      <h1>Remember what got you here</h1>
+    </body>
+  </div>
+</html>
